profilelist1exp/unpackaged/objects/Contract_Manager_Email__c.object
<CustomObject>
    <fields>
        <fullName>Business_unit1__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Retail</fullName>
                </value>
                <value>
                    <fullName>Global Direct Marketing &amp; EPP</fullName>
                </value>
                <value>
                    <fullName>Global Commercial Channel (GCC)</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Services &amp; Solutions</fullName>
                </value>
                <value>
                    <fullName>Small &amp; Medium Business (SMB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Admin_Email__c</fullName>
        <description>Contract Admin Email ID</description>
        <formula>Contract_Administrator__r.Email</formula>
        <label>Contract Admin Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for Contract Admin</description>
        <label>Contract Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Manager_Emails1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Manager_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_Email__c</fullName>
        <formula>Contract_Manager1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Senior_Manager_Email__c</fullName>
        <formula>Senior_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Senior Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Manager_Emails2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Region1__c</fullName>
        <label>Sub-Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Australia &amp; New Zealand (ANZ)</fullName>
                </value>
                <value>
                    <fullName>Central &amp; Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Western Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>ROA/ Pacific</fullName>
                </value>
                <value>
                    <fullName>South Asia &amp; Korea</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>United Kingdom &amp; Ireland (UKI)</fullName>
                </value>
                <value>
                    <fullName>Germany/Austria</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_field_for_Contract_Manager__c</fullName>
        <label>Unique field for Contract Manager</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CSMB Contract Email</label>
    <listViews>
        <fullName>All_CSMB_Contract_Email_Settings</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region1__c</columns>
        <columns>Business_unit1__c</columns>
        <columns>Senior_Manager_Email__c</columns>
        <columns>Contract_Admin_Email__c</columns>
        <columns>Contract_Manager_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>CSMB Contract Email Settings - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSMB_Contract_Email_Settings_APJ</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region1__c</columns>
        <columns>Business_unit1__c</columns>
        <columns>Senior_Manager_Email__c</columns>
        <columns>Contract_Admin_Email__c</columns>
        <columns>Contract_Manager_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>APJ</value>
        </filters>
        <label>CSMB Contract Email Settings - APJ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSMB_Contract_Email_Settings_Americas</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region1__c</columns>
        <columns>Business_unit1__c</columns>
        <columns>Senior_Manager_Email__c</columns>
        <columns>Contract_Admin_Email__c</columns>
        <columns>Contract_Manager_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>CSMB Contract Email Settings - Americas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSMB_Contract_Email_Settings_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region1__c</columns>
        <columns>Business_unit1__c</columns>
        <columns>Senior_Manager_Email__c</columns>
        <columns>Contract_Admin_Email__c</columns>
        <columns>Contract_Manager_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>CSMB Contract Email Settings - EMEA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UD{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSMB Contract Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>